--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -8,18 +8,10 @@
   </head>
 
   <body style='background-color: #EFEFEF; padding: 30px 0;'>
-    <table style='border-spacing: 0; border-collapse: collapse; border-radius: 5px; margin: 0 auto; width: 100%; max-width: 600px; color: #32325d; font-family: sans-serif;'>
-      <tr>
-        <td style='background-color: #fff; border-radius: 5px; padding: 20px;'>
-          <table style='width: 100%;'>
-            <tr>
-              <td style='font-size: 16px; line-height: 24px;'>
-                <%= yield %>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
+    <div style='background-color: #FFF; border-radius: 5px; margin: 0 auto; width: 100%; max-width: 600px; color: #525F7F; font-family: sans-serif;'>
+      <div style='font-size: 16px; line-height: 24px;'>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
